# k9rs

./: Cargo.toml  flake.nix
src/: main.rs
src/app/: actions.rs  mod.rs  nav.rs  table.rs  types.rs
src/cli/: contexts.rs  ctl.rs  get.rs  mod.rs
src/event/: handler.rs  handler_tests.rs  mod.rs
src/kube/: backend.rs  cache.rs  capabilities.rs  client_session.rs  daemon.rs  describe.rs  live_query.rs  live_query_dynamic.rs  metrics.rs  mod.rs  ops.rs  overlay.rs  protocol.rs  resource_def.rs  resource_types.rs  server_session.rs  session.rs  session_actions.rs  session_commands.rs  session_events.rs  session_handlers.rs  session_nav.rs  table.rs  watcher.rs
src/kube/local/: mod.rs  port_forward.rs  registry.rs  subscription.rs  types.rs
src/kube/mux/: mod.rs
src/kube/resource_defs/: cluster.rs  core.rs  mod.rs  registry.rs  workloads.rs
src/kube/resources/: clusterrolebindings.rs  clusterroles.rs  configmaps.rs  converters.rs  crds.rs  cronjobs.rs  daemonsets.rs  deployments.rs  endpoints.rs  endpointslices.rs  events.rs  hpa.rs  ingress.rs  ingresses.rs  jobs.rs  leases.rs  limitranges.rs  mod.rs  namespaces.rs  networkpolicies.rs  nodes.rs  pdb.rs  pods.rs  priorityclasses.rs  pvcs.rs  pvs.rs  rbac.rs  replicasets.rs  resourcequotas.rs  rolebindings.rs  roles.rs  row.rs  secrets.rs  serviceaccounts.rs  services.rs  statefulsets.rs  storageclasses.rs  webhooks.rs
src/kube/server_session/: mod.rs  ops.rs  streaming.rs
src/ui/: header.rs  mod.rs  theme.rs
src/ui/views/: context.rs  describe.rs  log.rs  mod.rs  (+4 more)
src/util/: atomic_option.rs  mod.rs
(+10 files in other folders)
