[package]
name = "k9rs"
version = "0.1.0"
edition = "2021"
description = "A fast Kubernetes TUI, inspired by k9s, built in Rust"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream", "serde"] }

# Kubernetes
kube = { version = "0.98", features = ["client", "runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
http = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
unicode-width = "0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rand = "0.9"
libc = "0.2"
dashmap = "6"

# Multiplexer: per-subscription substreams over the single Unix socket
# between TUI and daemon. We hide this behind `src/kube/mux/` so swapping
# implementations later (libp2p/yamux, hand-rolled, etc.) touches only that
# module — the rest of the codebase only sees `MuxedConnection`/`MuxedStream`.
tokio-yamux = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
